<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.afinal.ui.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_add_label"
        android:name="com.example.afinal.ui.AddLabelFragment"
        android:label="@string/menu_add_label"
        tools:layout="@layout/fragment_add_label" />

    <fragment
        android:id="@+id/nav_add_photo"
        android:name="com.example.afinal.ui.AddPhotoFragment"
        android:label="@string/menu_add_photo"
        tools:layout="@layout/fragment_add_photo" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.afinal.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.afinal.ui.LogOutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_log_out" />

</navigation>